チェックアウト機能をメール送信以外実装

--- a/config/locales/model/ja.yml
+++ b/config/locales/model/ja.yml
@@ -10,3 +10,15 @@ ja:
         sales_price: "販売価格"
         description: "商品説明"
         image: "商品画像"
+      user:
+        first_name: "名"
+        last_name: "姓"
+        user_name: "ユーザーネーム"
+        email: "メールアドレス"
+        zip: "郵便番号"
+        address: "住所"
+        detail_address: "建物名や部屋番号"
+        name_of_card: "カード名義人"
+        card_number: "カード番号"
+        expiration: "有効期限"
+        cvv: "セキュリティコード（CVV）"
